--- a/app/src/main/res/layout/activity_user_profile.xml
+++ b/app/src/main/res/layout/activity_user_profile.xml
@@ -4,9 +4,113 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="mutualpay.catchblocker.com.mutualpay.UserProfile">
+    tools:context="mutualpay.catchblocker.com.mutualpay.UserProfile"
+    android:id="@+id/RelativeLayout">
 
-    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+
+<!--    <TextView android:text="@string/UserName" android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/labelUserName"
+        android:layout_marginTop="170dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:editable="false"
+        android:elegantTextHeight="false" />
+-->
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true">
+
+        <EditText
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:id="@+id/textUserName"
+            android:editable="true"
+            android:clickable="true"
+            android:enabled="true"
+            android:focusable="true"
+            android:focusableInTouchMode="true"
+            android:inputType="text|textPersonName"
+            android:hint="Enter your name"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_marginTop="113dp"
+            android:background="@drawable/textbackground"
+            android:layout_marginBottom="10dp" />
+
+        <EditText
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:id="@+id/txtPNumber"
+            android:autoText="true"
+            android:clickable="true"
+            android:editable="true"
+            android:enabled="true"
+            android:focusable="true"
+            android:focusableInTouchMode="true"
+            android:hint="Enter you phone number"
+            android:inputType="phone|number"
+            android:background="@drawable/textbackground"
+            android:layout_above="@+id/btnSave"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true" />
+
+        <TextView
+            android:layout_width="115dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/Message"
+            android:layout_gravity="right" />
+
+        <Button
+            android:layout_width="147dp"
+            android:layout_height="wrap_content"
+            android:text="Save"
+            android:id="@+id/btnSave"
+            android:layout_centerVertical="true"
+            android:layout_centerHorizontal="true"
+            android:textAlignment="center"
+            android:background="#33bfff"
+            android:textColor="#ffffffff"
+            android:layout_margin="10dp" />
+
+        <Button
+            android:layout_width="147dp"
+            android:layout_height="wrap_content"
+            android:text="View"
+            android:id="@+id/btnView"
+            android:background="#33bfff"
+            android:layout_margin="10dp"
+            android:textColor="#ffffffff"
+            android:singleLine="true"
+            />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/Name" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/PhoneNumber" />
+    </LinearLayout>
+
+    <!--    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/PhoneNumber"
+        android:id="@+id/labelPhoneNumber"
+        android:layout_below="@+id/labelUserName"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+-->
 
 </RelativeLayout>
