--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,6 @@
 <resources>
 
     <color name="black_overlay">#66000000</color>
-
+    <color name="common_background_color">#33b5e5</color>
+    <color name="textbox_background_color">#cfcfcf</color>
 </resources>
