--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,8 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+    <dimen name="button_margin">10dp</dimen>
+    <dimen name="textbox_margin">10dp</dimen>
+    <dimen name="text_box_height">10dp</dimen>
+    <dimen name="text_box_width">50dp</dimen>
 </resources>
