--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -15,6 +15,21 @@
 
     <style name="TextBox">
         <item name="android:background">@color/textbox_background_color</item>
+        <item name="android:layout_height">@dimen/text_box_height</item>
+        <item name="android:layout_width">@dimen/text_box_width</item>
+        <item name="android:layout_marginBottom">@dimen/button_margin</item>
+    </style>
+
+    <style name="Button">
+        <item name="android:background">@color/button_background_color</item>
+        <item name="android:textColor">@color/button_text_color</item>
+        <item name="android:layout_marginBottom">@dimen/button_margin</item>
+        <item name="android:layout_marginLeft">@dimen/button_margin</item>
+        <item name="android:layout_marginRight">@dimen/button_margin</item>
+    </style>
+
+    <style name="ListView">
+        <item name="android:background">@color/listview_background_color</item>
     </style>
 
 
