--- a/app/src/main/res/layout/activity_add_bill.xml
+++ b/app/src/main/res/layout/activity_add_bill.xml
@@ -5,7 +5,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="com.catchblocker.mutualpay.AddBill"
-    android:id="@+id/">
+    android:id="@+id/abc">
 
     <TextView
         android:layout_width="wrap_content"
